Massive refactor: updated command registry, added new command handlers, removed unused code, and cleaned up code structure.